--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 # MONGODB_URI="mongodb+srv://neoweb24_db_user:OOpsZlY5WX7mv3lR@cluster0.yh3pumq.mongodb.net/velotrip_db?retryWrites=true&w=majority&appName=Cluster0"
+NUXT_PUBLIC_SITE_URL=massaclub.github.io
